# Tarea2-GeoComp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/GeoCPP/: Poligono.h  Punto.h  Utils.h  Vector.h
resultados/: plotting.py  results.txt
src/: Utils.cpp  main.cpp
test/: CMakeLists.txt  convexHullTests.cpp  randomPointsTest.cpp
